ClickImage now adjusts height based on text.  This was working on WebKit browsers, this fixes it for IE & Firefox.  Known Issue:  On Firefox and IE8 only, the page width narrows each time you click one of the images.  Works fine in IE10, Chrome and Safari.

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -1061,6 +1061,7 @@ ul.no-indent {
 	width: 95%;
 	margin-right: -17px;
 	padding-right: 34px;
+	max-height: none !important;
 }
 
 .clickImgTextHolder{
